--- a/WPF_Login/WPF_Login/WPF_Login.csproj
+++ b/WPF_Login/WPF_Login/WPF_Login.csproj
@@ -56,8 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BL\Command.cs" />
-    <Compile Include="BL\PasswordHelper.cs" />
-    <Compile Include="PassWordCmd.cs" />
+    <Compile Include="BL\PassWordCmd.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="View\Login.xaml.cs">
       <SubType>Code</SubType>
