오후11:49분 passwordbox만 해결하면 됌

--- a/WPF_Login/WPF_Login/WPF_Login.csproj
+++ b/WPF_Login/WPF_Login/WPF_Login.csproj
@@ -56,8 +56,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BL\Command.cs" />
+    <Compile Include="BL\DelegateCommand.cs" />
     <Compile Include="BL\PassWordCmd.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="ViewModel\VIewModelBase.cs" />
     <Compile Include="View\Login.xaml.cs">
       <SubType>Code</SubType>
       <DependentUpon>Login.xaml</DependentUpon>
