패스워드 박스 값 가져오기 성공 & 아이디 값 가져오기 성공 --> 이제 아이디랑 비밀번호 조건만 만들면 됌

--- a/WPF_Login/WPF_Login/WPF_Login.csproj
+++ b/WPF_Login/WPF_Login/WPF_Login.csproj
@@ -57,7 +57,7 @@
     </ApplicationDefinition>
     <Compile Include="BL\Command.cs" />
     <Compile Include="BL\DelegateCommand.cs" />
-    <Compile Include="BL\PassWordCmd.cs" />
+    <Compile Include="BL\PasswordBoxAssistant.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\VIewModelBase.cs" />
     <Compile Include="View\Login.xaml.cs">
